Complete Resume Page
Added missing public regeneration

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -74,30 +74,43 @@ for dispatching calculation jobs.</li>
 <h2 id="projects">Projects</h2>
 
 <table>
+<tr><td colspan=2><h3>Kubo & grellyd.com</h3></td></tr>
+<tr><td>2018-Present</td>
+<td>
+<ul>
+<li>Authored and updated my static page website generated with <b>Hugo</b>
+using my <b>Kubo</b> template and a custom <b>Go</b> server.</li>
+<li>Attended the <b>GoNorthwest conference </b>due to involvement in and
+admiration of the Go <b>community</b>.</td></li>
+</ul>
+</tr>
+<tr><td colspan=2><h3>SAM: Ericsson Innovation Awards 2017 Semi-Finalist</h3></td></tr>
 <tr>
-<td>2018-Present</td>
-<td>Kubo & grellyd.com
- * Authored and updated my static page w
- ebsite generated with <b>Hugo</b>
-using my <b>Kubo</b> template and a custom <b>Go</b> server.
- * Attended the <b>GoNorthwest conference </b>due to involvement in and
-admiration of the Go <b>community</b>.</td>
-</tr><tr>
 <td>2017</td>
-<td>SAM: Ericsson Innovation Awards 2017 Semi-Finalist
- * Developed and validated the concept of providing <b>low-cost</b> data-based
-farming via satellite imagery analysis for developing communities.
+<td>
+<ul>
+<li>Developed and validated the concept of providing <b>low-cost</b> data-based
+farming via satellite imagery analysis for developing communities.</li> 
+</ul>
 </td>
-</tr><tr>
+</tr>
+<tr><td colspan=2><h3>Poolr: Vancouver Startup Weekend Hackathon Winner 2016</h3></td></tr>
+<tr>
 <td>2016-2017</td>
-<td> Poolr: Vancouver Startup Weekend Hackathon Winner 2016
- * Pitched our B2B intra-company relationship building app successfully
- * Built <b>mobile</b> <b>MVP</b> alongside Two Tall Totems development studio
+<td> 
+<ul>
+<li>Pitched our B2B intra-company relationship building app to first place</li>
+<li>Built <b>mobile</b> <b>MVP</b> alongside Two Tall Totems development studio</li>
+</ul>
 </td>
-</tr><tr>
+</tr>
+<tr><td colspan=2><h3>Code the Change: Cofounder of UBC Club building software for Nonprofits</h3></td></tr>
+<tr>
 <td>2016-2017</td>
-<td>Code the Change: Cofounder of UBC Club building software for Nonprofits
- * Built software solutions for needs in the local <b>nonprofit</b> community
+<td>
+<ul>
+<li>Built software solutions for needs in the local <b>nonprofit</b> community</li>
+</ul>
 </td></tr></table>
 
 <h2 id="education">Education</h2>
@@ -114,7 +127,7 @@ in a hammock on the beach as camping next to a mountain stream.</p>
 
 <p>Available upon request</p>
 
-<p><a href="https://s3-us-west-2.amazonaws.com/grellyddotcom-public/resume_sept_12th_2018.pdf">Resume PDF</a></p>
+<p><a href="https://s3-us-west-2.amazonaws.com/grellyddotcom-public/resume_sept_12th_2018.pdf">PDF</a></p>
 
 
 <ul>
