Updated Grad Date

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -116,7 +116,7 @@ farming via satellite imagery analysis for developing communities.</li>
 <h2 id="education">Education</h2>
 
 <p><b>BSc</b>. in <b>Computer Science</b> from the University of British Columbia (UBC).
-Expected Graduation Fall 2018</p>
+Expected Graduation Nov 2018</p>
 
 <h2 id="personal">Personal</h2>
 
