Updated the resume s3 link

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
 <p>This page is under construction. Please excuse the mess.</p>
 
-<p>In the meantime, connect with me!</p>
+<p>In the meantime, take a look at my <a href="/resume">resume</a> and connect with me!</p>
 
 <ul>
 <li><a href="https://github.com/grellyd">Github</a></li>
