Removed link to email.

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -36,7 +36,7 @@
 
 <h3 id="vancouver-bc-v6r-2g1">Vancouver, BC V6R 2G1</h3>
 
-<p><a href="graham@grellyd.com">graham@grellyd.com</a></p>
+<p>Email: <u>graham at grellyd.com</u></p>
 
 <h2 id="objective">Objective</h2>
 
