Updated to Kubo Version with working responsive sidebar.

--- a/public/404.html
+++ b/public/404.html
@@ -25,9 +25,11 @@
 
 </div>
 
-        
+        <div id="main">
+            
 Uh oh... Page not found!
 
+        </div>
         <div id="footer">
     <div class="links">
         <ul>
