--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -25,7 +25,8 @@
 
 </div>
 
-        
+        <div id="main">
+            
 
 <h1>Resume</h1>
 
@@ -135,6 +136,7 @@ in a hammock on the beach as camping next to a mountain stream.</p>
 </ul>
 
 
+        </div>
         <div id="footer">
     <div class="links">
         <ul>
