--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 
 </div>
 
-        
+        <div id="main">
+            
 
 
 <h1 id="welcome">Welcome!</h1>
@@ -55,6 +56,7 @@
 </ul>
 
 
+        </div>
         <div id="footer">
     <div class="links">
         <ul>
