--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/css/grellyd.css">
         <link rel="stylesheet" href="/css/kubo.css">
 <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <title>Grellyd - Graham L. Brown</title>
     </head>
     <body>
@@ -140,9 +141,9 @@ in a hammock on the beach as camping next to a mountain stream.</p>
         <div id="footer">
     <div class="links">
         <ul>
-            <li><a href="https://github.com/grellyd/">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/grellyd/">LinkedIn</a></li>
-            <li><a href="https://twitter.com/grellyd/">Twitter</a></li>
+            <li><a href="https://github.com/grellyd/"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/grellyd/"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://twitter.com/grellyd/"><i class=" fab fa-twitter"></i></a></li>
         </ul>
         <p>
         &copy; 2018 Graham L. Brown
