Swapped to Mailto Link

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -38,7 +38,7 @@
 
 <h3 id="vancouver-bc-v6r-2g1">Vancouver, BC V6R 2G1</h3>
 
-<p>Email: <u>graham at grellyd.com</u></p>
+<p>Email: <a href="mailto:graham@grellyd.com">graham@grellyd.com</a></p>
 
 <h2 id="objective">Objective</h2>
 
