Added floating image and improved front page copy

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,7 @@
             
 
 
-<h1 id="welcome">Welcome!</h1>
-
-<h2 id="you-ve-hit-the-personal-website-of-graham-l-brown">You&rsquo;ve hit the personal website of Graham L. Brown</h2>
-
-<h3 id="backend-developer-backpacker-and-student">Backend Developer, Backpacker, and Student</h3>
+<h1 id="hi-i-m-graham">Hi I&rsquo;m Graham&hellip;</h1>
 
 
 <figure class="profile_image">
@@ -46,15 +42,13 @@
 </figure>
 
 
-<p>This page is under construction. Please excuse the mess.</p>
+<p>&hellip;a backend developer, backpacker, and wannabe outdoorsman from Vancovuer, Canada.</p>
 
-<p>In the meantime, take a look at my <a href="/resume">resume</a> and connect with me!</p>
+<p>You can find me as <strong>@grellyd</strong> most places online.</p>
 
-<ul>
-<li><a href="https://github.com/grellyd">Github</a></li>
-<li><a href="https://www.linkedin.com/in/grellyd/">LinkedIn</a></li>
-<li><a href="https://twitter.com/grellyd/">Twitter</a></li>
-</ul>
+<p>This site is a perpetual work in progress. For now, take a look at my <a href="/resume">resume</a>.</p>
+
+<p>The best way to contact me is to reach out via email <a href="mailto:graham@grellyd.com">graham@grellyd.com</a></p>
 
 
         </div>
