--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -129,7 +129,7 @@ in a hammock on the beach as camping next to a mountain stream.</p>
 
 <p>Available upon request</p>
 
-<p><a href="https://s3-us-west-2.amazonaws.com/grellyddotcom-public/resume.pdf">PDF</a></p>
+<p><a href="/files/resume_graham_l_brown.pdf">PDF</a></p>
 
 
 <ul>
