Fixed spelling errors

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 </figure>
 
 
-<p>&hellip;a backend developer, backpacker, and wannabe outdoorsman from Vancovuer, Canada.</p>
+<p>&hellip;a backend developer, backpacker, and wannabe outdoorsman from Vancouver, Canada.</p>
 
 <p>You can find me as <strong>@grellyd</strong> most places online.</p>
 
