Updated to use instagram kubo commit

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -144,6 +144,7 @@ in a hammock on the beach as camping next to a mountain stream.</p>
             <li><a href="https://github.com/grellyd/"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/grellyd/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/grellyd/"><i class=" fab fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com/grellyd/"><i class=" fab fa-instagram"></i></a></li>
         </ul>
         <p>
         &copy; 2018 Graham L. Brown
