--- a/public/404.html
+++ b/public/404.html
@@ -37,6 +37,7 @@ Uh oh... Page not found!
             <li><a href="https://github.com/grellyd/"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/grellyd/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/grellyd/"><i class=" fab fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com/grellyd/"><i class=" fab fa-instagram"></i></a></li>
         </ul>
         <p>
         &copy; 2018 Graham L. Brown
