--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
             <li><a href="https://github.com/grellyd/"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/grellyd/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/grellyd/"><i class=" fab fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com/grellyd/"><i class=" fab fa-instagram"></i></a></li>
         </ul>
         <p>
         &copy; 2018 Graham L. Brown
