Change thing to result in about

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -57,7 +57,7 @@
 
 <h3 id="why-grellyd">Why Grellyd?</h3>
 
-<p>Grellyd stems from my first attempt at a screen name combined with a portion of my middle name: <strong>gre</strong>yham <strong>ll</strong>o<strong>yd</strong>. I can happily say that I am the only thing one finds when they Google &lsquo;grellyd&rsquo;.</p>
+<p>Grellyd stems from my first attempt at a screen name combined with a portion of my middle name: <strong>gre</strong>yham <strong>ll</strong>o<strong>yd</strong>. I can happily say that I am the only result one finds when they Google &lsquo;grellyd&rsquo;.</p>
 
 <h3 id="why-computer-science">Why Computer Science?</h3>
 
