--- a/public/xmas/index.html
+++ b/public/xmas/index.html
@@ -76,39 +76,17 @@ if (!doNotTrack) {
         <div id="main">
             
 
-<h1>About</h1>
+<h1>Xmas</h1>
 
 
-
-
-<figure class="profile_image">
-    <img src="/images/ski_profile.jpg"
-         alt="Grellyd Backcountry Skiing in Whistler"/> 
-</figure>
-
-
-<p>Hi I&rsquo;m Graham.</p>
-
-<p>@grellyd most places online.</p>
-
-<p>I&rsquo;m a twenty-something who likes working on his laptop and adventuring outside. Overall I&rsquo;m always looking for my next adventure.</p>
-
-<p>If you are looking for my C.V. jump to my <a href="/resume">resume</a>.</p>
-
-<p>This site functions as a portfolio of my work beyond <a href="https://github.com/grellyd">Github</a>. It is a continual work in progress.</p>
-
-<h3 id="why-grellyd">Why Grellyd?</h3>
-
-<p>Grellyd stems from my first attempt at a screen name combined with a portion of my middle name: <strong>gre</strong>yham <strong>ll</strong>o<strong>yd</strong>. I can happily say that I am the only result one finds when they Google &lsquo;grellyd&rsquo;.</p>
-
-<h3 id="why-computer-science">Why Computer Science?</h3>
-
-<p>In short, the feeling of using software to solve problems.</p>
-
-<p>After being struck in my first class by the immense power of programming and a strange sense of freedom, I realised I could experiment and try to solve problems without &lsquo;breaking&rsquo; the computer. Since then I&rsquo;ve gone from class to class, project to project, job to job, with the same sense of wonder, freedom, and power. I am very happy to be in this field, and aim to use this fabulous toolkit to create a strong positive impact.</p>
 
 
 <ul>
+  
+  <li>
+    <span class="date">2018/12/24</span>
+    <a href="/xmas/2018/">Christmas Letter 2018: Talking</a>
+  </li>
   
 </ul>
 
