Added email icon to the bottom

--- a/public/404.html
+++ b/public/404.html
@@ -9,8 +9,8 @@
         <base href="/">
         <link rel="stylesheet" href="/css/grellyd.css">
         <link rel="stylesheet" href="/css/kubo.css">
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <title>Grellyd - Graham L. Brown</title>
         
 <script type="application/javascript">
@@ -72,6 +72,7 @@ Uh oh... Page not found!
         <div id="footer">
     <div class="links">
         <ul>
+            <li><a href="mailto:graham@grellyd.com/"><i class="far fa-envelope"></i></a></li>
             <li><a href="https://github.com/grellyd/"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/grellyd/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="https://twitter.com/grellyd/"><i class=" fab fa-twitter"></i></a></li>
