Undrafting holiday letter

--- a/public/xmas/index.html
+++ b/public/xmas/index.html
@@ -76,12 +76,17 @@ if (!doNotTrack) {
         <div id="main">
             
 
-<h1>Categories</h1>
+<h1>Xmas</h1>
 
 
 
 
 <ul>
+  
+  <li>
+    <span class="date">2018/12/25</span>
+    <a href="/xmas/2018/">Christmas Letter 2018: Talking</a>
+  </li>
   
 </ul>
 
