Added clickable captions

--- a/public/email/grandpabrown/index.html
+++ b/public/email/grandpabrown/index.html
@@ -109,21 +109,21 @@ if (!doNotTrack) {
 <p><figure class="email_image"><a href="mailto:toquehead@gmail.com">
     <img src="/images/email/grandpabrown/doug.jpg"
          alt="Email Doug"/> </a><figcaption>
-            <p><b>Email Doug</b></p>
+            <p><b><a href="mailto:toquehead@gmail.com">Email Doug</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:gbrown@harpergrey.com">
     <img src="/images/email/grandpabrown/guy.png"
          alt="Email Guy"/> </a><figcaption>
-            <p><b>Email Guy</b></p>
+            <p><b><a href="mailto:gbrown@harpergrey.com">Email Guy</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:bronzecobra65@gmail.com">
     <img src="/images/email/grandpabrown/gord.jpg"
          alt="Email Gord"/> </a><figcaption>
-            <p><b>Email Gord</b></p>
+            <p><b><a href="mailto:bronzecobra65@gmail.com">Email Gord</a></b></p>
         </figcaption>
 </figure>
 </p>
@@ -135,21 +135,21 @@ if (!doNotTrack) {
 <p><figure class="email_image"><a href="mailto:vanda.spence@gmail.com">
     <img src="/images/email/grandpabrown/vanda.jpg"
          alt="Email Vanda"/> </a><figcaption>
-            <p><b>Email Vanda</b></p>
+            <p><b><a href="mailto:vanda.spence@gmail.com">Email Vanda</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:gytbrown@gmail.com">
     <img src="/images/email/grandpabrown/gail.jpg"
          alt="Email Gail"/> </a><figcaption>
-            <p><b>Email Gail</b></p>
+            <p><b><a href="mailto:gytbrown@gmail.com">Email Gail</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:toquehead@gmail.com">
     <img src="/images/email/grandpabrown/sandy.jpg"
          alt="Email Sandy"/> </a><figcaption>
-            <p><b>Email Sandy</b></p>
+            <p><b><a href="mailto:toquehead@gmail.com">Email Sandy</a></b></p>
         </figcaption>
 </figure>
 </p>
@@ -161,28 +161,28 @@ if (!doNotTrack) {
 <p><figure class="email_image"><a href="mailto:ben@benbrown.ca">
     <img src="/images/email/grandpabrown/ben.png"
          alt="Email Ben"/> </a><figcaption>
-            <p><b>Email Ben</b></p>
+            <p><b><a href="mailto:ben@benbrown.ca">Email Ben</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:brown.samanthaspence@gmail.com">
     <img src="/images/email/grandpabrown/sam.jpg"
          alt="Email Sam"/> </a><figcaption>
-            <p><b>Email Sam</b></p>
+            <p><b><a href="mailto:brown.samanthaspence@gmail.com">Email Sam</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:graham.lloyd.brown@gmail.com">
     <img src="/images/email/grandpabrown/graham.jpg"
          alt="Email Graham"/> </a><figcaption>
-            <p><b>Email Graham</b></p>
+            <p><b><a href="mailto:graham.lloyd.brown@gmail.com">Email Graham</a></b></p>
         </figcaption>
 </figure>
 
 <figure class="email_image"><a href="mailto:jybrown717@gmail.com">
     <img src="/images/email/grandpabrown/julia.jpg"
          alt="Email Julia"/> </a><figcaption>
-            <p><b>Email Julia</b></p>
+            <p><b><a href="mailto:jybrown717@gmail.com">Email Julia</a></b></p>
         </figcaption>
 </figure>
 </p>
