Updated phots from WIP images. Updated Sandy's email.

--- a/public/email/grandpabrown/index.html
+++ b/public/email/grandpabrown/index.html
@@ -114,7 +114,7 @@ if (!doNotTrack) {
 </figure>
 
 <figure class="email_image"><a href="mailto:gbrown@harpergrey.com">
-    <img src="/images/email/grandpabrown/guy.png"
+    <img src="/images/email/grandpabrown/guy.jpg"
          alt="Email Guy"/> </a><figcaption>
             <p><b><a href="mailto:gbrown@harpergrey.com">Email Guy</a></b></p>
         </figcaption>
@@ -149,7 +149,7 @@ if (!doNotTrack) {
 <figure class="email_image"><a href="mailto:toquehead@gmail.com">
     <img src="/images/email/grandpabrown/sandy.jpg"
          alt="Email Sandy"/> </a><figcaption>
-            <p><b><a href="mailto:toquehead@gmail.com">Email Sandy</a></b></p>
+            <p><b><a href="mailto:sandy.mcguinness@gmail.com">Email Sandy</a></b></p>
         </figcaption>
 </figure>
 </p>
@@ -159,7 +159,7 @@ if (!doNotTrack) {
 <h2 id="grandkids">Grandkids</h2>
 
 <p><figure class="email_image"><a href="mailto:ben@benbrown.ca">
-    <img src="/images/email/grandpabrown/ben.png"
+    <img src="/images/email/grandpabrown/ben.jpg"
          alt="Email Ben"/> </a><figcaption>
             <p><b><a href="mailto:ben@benbrown.ca">Email Ben</a></b></p>
         </figcaption>
