--- a/public/email/grandpabrown/index.html
+++ b/public/email/grandpabrown/index.html
@@ -202,6 +202,17 @@ if (!doNotTrack) {
 
 <p>Who do you want to add Grandpa?</p>
 
+
+
+map[string]interface {}{&#34;title&#34;:&#34;Lloyd (Grandpa) Brown Email Index&#34;, &#34;draft&#34;:false, &#34;iscjklanguage&#34;:false}
+<br><br>
+
+    &#34;Christmas Letter 2018: Talking&#34;
+    &#34;xmas&#34;
+
+    &#34;Lloyd (Grandpa) Brown Email Index&#34;
+    &#34;email&#34;
+
 </main>
 
         </div>
