fixed bolding error

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -156,7 +156,7 @@ if (!doNotTrack) {
 <td><ul>
 <li>Created a <b>real-time</b> identity verification system of Licensed Mortgage
 Brokers in Canada for the Level by Lendesk mobile app in <b>Ruby</b> using
-Nokogiri<b> and the core Lendesk <b>Rails</b> monolith.</li>
+<b>Nokogiri</b> and the core Lendesk <b>Rails</b> monolith.</li>
 <li>Led an effort to create a <b>naive bayes</b> based automatic document
 classification system in <b>Python</b> using <b>SciKit Learn</b> trained on
 Lendesk’s dataset. </li>
