Updated resume content

--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -197,10 +197,14 @@ admiration of the Go <b>community</b>.</li>
 <tr><td>2018</td>
 <td>
 <ul>
-<li>Constructed two <b>Go distributed systems</b> in a <b>team</b> of five students.</li>
-<li>Authored a custom <b>Go</b> logging package to track distributed behaviour.</li>
+<li>Constructed two <b>complex distributed systems</b>, leveraging <b>Go’s</b> speed and low level abilities, including advanced features such as channels. </li>
+<li>Thrived in a <b>remote</b> five student team to build:</li>
+<ul>
+<li>A robust multi-client blockchain-based art project.</li>
 <li><a href="https://github.com/grellyd/cpsc_416_p1_blockchain_art">https://github.com/grellyd/cpsc_416_p1_blockchain_art</a></li>
+<li>A failure-tolerant PAXOS consensus system.</li>
 <li><a href="https://github.com/grellyd/cpsc_416_p2_distributed_diary">https://github.com/grellyd/cpsc_416_p2_distributed_diary</a></li>
+</ul>
 </td></li>
 </ul>
 </tr>
@@ -209,8 +213,7 @@ admiration of the Go <b>community</b>.</li>
 <td>2017</td>
 <td>
 <ul>
-<li>Developed and validated the concept of providing <b>low-cost</b> data-based
-farming via satellite imagery analysis for developing communities.</li> 
+<li>Developed and validated the concept of providing <b>low-cost</b> data-based farming via <b>satellite imagery analysis</b> for developing communities.</li> 
 <li><a href="https://www.ericsson.com/careers/blog/career-topics/gunjana/2017-ericsson-innovation-awards-semi-finalists/">https://www.ericsson.com/careers/blog/career-topics/gunjana/2017-ericsson-innovation-awards-semi-finalists/</a></li>
 </ul>
 </td>
