Added 1Password Experience

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -146,6 +146,8 @@ if (!doNotTrack) {
 
 <p>If you are looking for my C.V. jump to my <a href="/resume">resume</a>.</p>
 
+<p>I work for <a href="https://1password.com/">1Password</a> as a backend software developer, specifically as a &ldquo;SCIM Bridge Gatekeeper&rdquo;. That translates to a backend software engineer on the team responsible for technical tools for business clients. These include the <a href="https://support.1password.com/scim/">1Password SCIM Bridge</a> and the <a href="https://support.1password.com/command-line-getting-started/">Command Line Interface</a>. I started working for 1Password in March 2019.</p>
+
 <p>This site functions as a portfolio of my work beyond <a href="https://github.com/grellyd">Github</a>. It is a continual work in progress.</p>
 
 <h3 id="why-grellyd">Why Grellyd?</h3>
