--- a/public/index.html
+++ b/public/index.html
@@ -141,6 +141,8 @@ if (!doNotTrack) {
 
 <p>You can find me as <strong>@grellyd</strong> most places online.</p>
 
+<p>I&rsquo;ve worked for <a href="https://1password.com/">1Password</a> as a backend software developer since March 2019, with the specific title of SCIM Bridge Developer.</p>
+
 <p>This site is a perpetual work in progress. For now, take a look at my <a href="/resume">resume</a>.</p>
 
 <p>The best way to contact me is to reach out via email <a href="mailto:graham@grellyd.com">graham@grellyd.com</a></p>
