--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -142,6 +142,7 @@ if (!doNotTrack) {
 <tr><td>Github</td><td><a href="https://github.com/grellyd">https://github.com/grellyd</a><br></td></tr>
 <tr><td>LinkedIn</td><td><a href="https://linkedin.com/in/grellyd">https://linkedin.com/in/grellyd</a><br></td></tr>
 <tr><td>Twitter</td><td><a href="https://twitter.com/grellyd">https://twitter.com/grellyd</a><br></td></tr>
+<tr><td>Email</td><td><a href="mailto:graham.brown@1password.com">graham.brown@1password.com</a><br></td></tr>
 </table>
 
 <h2 id="objective">Objective</h2>
@@ -151,8 +152,15 @@ if (!doNotTrack) {
 <h2 id="employment">Employment</h2>
 
 <table> 
+<tr><td colspan=2><h3>1Password: SCIM Bridge Gatekeeper</h3></td></tr>
+<tr><td>March 2019-Present<br><br>Remote</td>
+<td><ul>
+<li>Expanded and improved the entirely <b>Go</b> SCIM Bridge, run in <b>Docker</b> and deployed on <b>Google Cloud Platform</b> in currently unreleased ways!</li>
+</ul>
+</td></tr>
+
 <tr><td colspan=2><h3>Lendesk: Software Developer Co-op</h3></td></tr>
-<tr><td>2017<br>Vancouver, BC</td>
+<tr><td>2017<br><br>Vancouver, BC</td>
 <td><ul>
 <li>Created a <b>real-time</b> identity verification system of Licensed Mortgage
 Brokers in Canada for the Level by Lendesk mobile app in <b>Ruby</b> using
@@ -164,7 +172,7 @@ Lendesk’s dataset. </li>
 </td></tr>
 
 <tr><td colspan=2><h3>FINCAD: Software Developer Co-op</h3></td></tr>
-<tr><td>2015<br>Surrey, BC</td>
+<tr><td>2015<br><br>Surrey, BC</td>
 <td><ul>
 <li>Authored a <b>Technical Design Document</b> (TDD) for a power user
 usability enhancement project after <b>gathering requirements</b> from
